--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DB_NAME=incomeexpensedb
+DB_NAME=expensedb
 DB_USER=postgres
 DB_PASSWORD=post@pass
 DB_HOST=localhost
+DB_PORT=5432
+SECRET_KEY=34s!ff9t$he46#)qu$7re2w=8_@)&jkhrk#08r&1x54mlt(!-k
