--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_NAME=incomeexpensedb
-DB_USER=postgres
-DB_PASSWORD=post@pass
-DB_HOST=localhost
-DB_PORT=5432
-SECRET_KEY=34s!ff9t$he46#)qu$7re2w=8_@)&jkhrk#08r&1x54mlt(!-k
+# DB_NAME=incomeexpensedb
+# DB_USER=postgres
+# DB_PASSWORD=post@pass
+# DB_HOST=localhost
+# DB_PORT=5432
+# SECRET_KEY=34s!ff9t$he46#)qu$7re2w=8_@)&jkhrk#08r&1x54mlt(!-k
 EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_HOST_PASSWORD= qypj ygwk euek hpbc
